--- a/index.html
+++ b/index.html
@@ -1,1 +1,122 @@
+<html>
+	<head>
+		<link href="style.css" rel="stylesheet">
+		<title>Your Name resume</title>
+	</head>
 
+	<body>
+		<header id="header">
+			<!-- resume header with your name and title -->
+			<h1><b>Chong</b> Chen</h1>
+			<hr>
+			Technical Program Manager
+			<hr>
+		</header>
+		<main>
+			<article id="mainLeft">
+				<section>
+					<h2>CONTACT</h2>
+					<p>
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                        <a href="mailto:paulpeter@foxmail.com">paulpeter@foxmail.com</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-github" aria-hidden="true"></i>
+                        <a href="github.com/pppaulpeter">pppaulpeter</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-linkedin" aria-hidden="true"></i>
+                        <a href="linkedin.com/in/paul-chen-hello">in/paul-chen-hello</a>
+                    </p>
+				</section>
+				<section>
+					<h2>SKILLS</h2>
+					<p>C language</p>
+                    <p>Embedded Linux</p>
+                    <p>Program Management</p>
+				</section>
+				<section>
+					<h2>EDUCATION</h2>
+                    <b>Master's degree</b>
+					<b>Biomedical Engineering</b>
+                    <p>
+                        Zhejiang University
+                    </p>
+                    <p>
+                        2010-2013
+                    </p>
+                    <b>Bachelor's degree</b>
+					<b>Biomedical Engineering</b>
+                    <p>
+                        Northeastern University
+                    </p>
+                    <p>
+                        2006-2010
+                    </p>
+				</section>            
+			</article>
+			<article id="mainRight">
+				<section>
+					<h2>ABOUT</h2>
+					<p>Specialize in software development in embedded systems. I am passionate about providing suitable solutions for the end customers in the IoT industry and always showing a very large commitment and taking a lot of responsibility for the bigger picture in the project.</p>
+				</section>
+				<section>
+					<h2>WORK EXPERIENCE</h2>
+					<h3><b>Senior Project Manager </b></h3>
+                    <p>
+                            Hikvision | 2019 - 2021
+                    </p>
+                    <p>
+                        1. Paxton WEBRTC P10 camera
+                        Served as one of the main developer and project manager, charged for the overall hardware and software requirements evaluation. Developing the industry's first WEBRTC security camera. The project was completed on schedule, and more than 4,000 4K CCTV cameras have been shipped in the past six months. Paxton customers have become the new major growth point of Hikvision in the UK.
+                        
+                    </p>
+
+                    <p>
+                        2. ADECK supermarket trolley detection project
+Served as one of the main developer and project manager, proposed to use the Hikvision AI open platform to meet the needs of customized algorithms. Using the video provided by the customer directly train to generate deep learning algorithms that detect the trolley. This project is Hikvision's first overseas project using AI open platform.
+
+                    </p>
+
+                    <p>
+                        3. Evercam Hikvision embedded open platform HIKFlow integration
+Served as the project manager, this project is the first HEOP deep learning HIKFlow integration project in oversee. By the HIKFlow conversion tool, the customer's Yolo network-based truck detection algorithm was successfully run on the Hikvision' camera, which greatly reducing the customer's algorithm server cost.
+                    </p>
+                    <h3><b>Product Marketing Manager </b></h3>
+                    <p>
+                            Hikvision | 2017 - 2019
+                    </p>
+                    <p>
+                        1. Analysis of technical requirements of large-scale projects(>0.5 million $). Solution design, project POC and delivery milestone planning.
+                    </p>
+
+                    <p>
+                        2. Hikvision embedded open platform partner management
+                        Responsible for the IPS GmbH customer HEOP project evaluation, integration, Making IPS the first oversee partner of the Hikvision HEOP program.                        
+                    </p>
+
+                    <h3><b>Technical Manager </b></h3>
+                    <p>
+                            Hikvision | 2017 - 2017
+                    </p>
+                    <p>
+                        1.2018 Russian Presidential Election Intelligent Monitoring Project
+Lead the software and hardware requirements evaluation, assisting Russian ISV customers to develop camera firmware from scratch in a very short time (within a month and a half), and produce 70,000 CCTV camera devices within a month. The size of the project is about 6 million $, such project has not been landed before in Hikvision.
+
+                    </p>
+
+                    <p>
+                        2. Supra HEOP integration Project
+                        The project shipped about 20,000 CCTV cameras, responsible for customer demand evaluation, prototype development. Remove all the Hikvision camera application layer code, open the DSP layer interface, and use the shared buffer to send audio and video streams to client applications.                        
+                    </p>
+
+                    <p>
+                        3. Dallmeier HEOP PTZ camera integration Project
+Responsible for customer demand evaluation, prototype development, system design, and onsite support. The project shipped about 10,000 PTZ cameras, making Dallmeier the biggest customer in the European area.
+                        
+                    </p>
+				</section>
+			</article>
+		</main>
+	</body>
+</html>
