--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<link href="style.css" rel="stylesheet">
 		<title>Your Name resume</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	</head>
 
 	<body>
